# cognifli

./: .travis.yml  README.md
contrib/: EclipseInsall.py  INSTALL.py
contrib/environment/: .vimrc  README.md
src/cognifli_hardware_drivers/realsense_driver/: CMakeLists.txt  package.xml
src/cognifli_hardware_drivers/realsense_driver/launch/: realsense_driver.launch  realsense_driver_demo.launch
src/cognifli_hardware_drivers/realsense_driver/rviz/: realsense_driver_demo.rviz
src/cognifli_simulator/cognifli_description/: CMakeLists.txt  package.xml
src/cognifli_simulator/cognifli_description/cognifli_drone/meshes/: IntelNUC.skp
src/cognifli_simulator/cognifli_description/cognifli_drone/urdf/: cognifli_drone.urdf.xacro  kinect_camera.urdf.xacro  materials.xacro
src/cognifli_simulator/cognifli_gazebo/: CMakeLists.txt  package.xml
src/cognifli_simulator/cognifli_gazebo/launch/: cognifli.rviz  cognifli_world.launch  spawn_cognifli_drone.launch
src/cognifli_simulator/cognifli_gazebo/worlds/: cognifli.world
src/cognifli_simulator/cognifli_gazebo/worlds/Media/models/: arc_drone_lab.dae
src/cognifli_simulator/cognifli_teleop/: CMakeLists.txt  package.xml
src/cognifli_simulator/cognifli_teleop/launch/: cognifli_teleop.launch
src/cognifli_simulator/cognifli_teleop/scripts/: key_teleop.py
src/snapflight/: CMakeLists.txt  main.cpp  package.xml
