<?xml version="1.0"?>
<package>
  <name>realsense_driver</name>
  <version>0.1.0</version>
  <description>This a helper package to store configurations realsense_camera</description>

  <maintainer email="anton.mitrokhin@phystech.edu">ncos</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>realsense_camera</build_depend>
  <run_depend>realsense_camera</run_depend>
</package>
