<?xml version="1.0"?>
<package>
  <name>cognifli_description</name>
  <version>0.1.0</version>
  <description>The cognifli_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="anton.mitrokhin@phystech.edu">Anton Mitrokhin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>

</package>
