<package>
  <name>cognifli_gazebo</name>
  <version>0.1.0</version>
  <description>cognifli_gazebo</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="anton.mitrokhin@phystech.edu">Anton Mitrokhin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cognifli_description</run_depend>
<!--  <run_depend>cognifli_control</run_depend> />-->
  <run_depend>gazebo_ros</run_depend> 

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
    <!--<gazebo_ros_control plugin="${prefix}/drone/plugins/plugin.xml"/>-->
    <!--<controller_interface plugin="${prefix}/drone/plugins/plugin.xml"/>-->
  </export>
</package>
